add github login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.thymeleaf.cache=false
 
+github.client.id=04756ad84718e094174b
+github.client.secret=8db729c177d7de1e417dd0aaaec308b60f90df19
+github.redirect.uri=http://localhost:8080/callback
