--- a/pom.xml
+++ b/pom.xml
@@ -52,11 +52,19 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.60.sec09</version>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>mysql</groupId>-->
+<!--            <artifactId>mysql-connector-java</artifactId>-->
+<!--            <scope>runtime</scope>-->
+<!--        </dependency>-->
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <scope>runtime</scope>
+            <version>5.1.47</version>
         </dependency>
+
+
         <!--引入druid数据源  -->
         <dependency>
             <groupId>com.alibaba</groupId>
